--- a/.github/workflows/component_integration_test_1.yml
+++ b/.github/workflows/component_integration_test_1.yml
@@ -47,6 +47,7 @@ jobs:
           npm install react react-dom
         shell: pwsh
 
-      - name: Run tests
-        run: npm test
+      - name: Run tests with detailed logs
+        run: |
+          npx vitest run --verbose
         shell: pwsh
