--- a/.github/workflows/component_integration_test_1.yml
+++ b/.github/workflows/component_integration_test_1.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '14.x'
 
       - name: Set up Python
         uses: actions/setup-python@v5
