--- a/.github/workflows/unit_testing.yml
+++ b/.github/workflows/unit_testing.yml
@@ -1,31 +1,39 @@
-name: Frontend Unit Testing
+name: Button Test
 
 on:
   push:
     branches:
-      - 'frontend-testing'
+      - main
   pull_request:
     branches:
-      - 'frontend-testing'
+      - main
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js environment
-        uses: actions/setup-node@v2
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          node-version: '14.x'
+          python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          npm install
-          npm install vitest --save-dev
+      - name: Create virtual environment
+        run: python -m venv .venv
 
-      - name: Run tests
+      - name: Activate virtual environment and install dependencies
         run: |
-          npm run test
+          & .\.venv\Scripts\Activate.ps1
+          npm ci
+          npm install --save-dev @vitejs/plugin-react @testing-library/react @testing-library/jest-dom vitest@latest msw
+          npm install vitest@latest cac@latest
+        shell: pwsh
+
+      - name: Run tests with multiple paths
+        run: |
+          & .\.venv\Scripts\Activate.ps1
+          npx vitest run 'src/components/test/**/*.{test,spec}.js' 'src/components/**/*.{test,spec}.js' 'src/**/*.{test,spec}.js'
+        shell: pwsh
