--- a/.github/workflows/api_integration_tests.yml
+++ b/.github/workflows/api_integration_tests.yml
@@ -1,5 +1,4 @@
 name: API Integration Tests
-
 on:
   push:
     branches: [ main ]
@@ -13,21 +12,18 @@ jobs:
     env:
       PYTHONUTF8: "1"
       VELTRAX_API_TOKEN: ${{ secrets.VELTRAX_API_TOKEN }}
-
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python 3.13
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.13"
-
+      - uses: actions/checkout@v4
+      - name: Restore private core
+        run: |
+          echo "${{ secrets.PRIVATE_CORE_ZIP_B64 }}" > core.b64
+          base64 --decode core.b64 > PrivateCore.zip
+          unzip -o PrivateCore.zip -d core
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -e .[dev]  # install dev dependencies including respx
-
+          pip install -e core[dev]
+          pip install -e .[dev]
       - name: Run pytest
         run: pytest -q
