--- a/.github/workflows/button_test.yml
+++ b/.github/workflows/button_test.yml
@@ -16,37 +16,49 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Restore private core
+        shell: pwsh
+        run: |
+          echo "${{ secrets.PRIVATE_CORE_ZIP_B64 }}" > core.b64
+          base64 --decode core.b64 > PrivateCore.zip
+          unzip -o PrivateCore.zip -d core
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
       - name: Debug Python setup
-        run: python --version || echo "Python not found"
         shell: pwsh
+        run: |
+          python --version || echo "Python not found"
 
       - name: Create virtual environment
+        shell: pwsh
         run: python -m venv .venv
-        continue-on-error: false
 
       - name: Activate virtual environment and install dependencies
+        shell: pwsh
         run: |
           & .\.venv\Scripts\Activate.ps1
           npm ci
-          dir .venv\Scripts
-        shell: pwsh
 
       - name: Debug environment
+        shell: pwsh
         run: |
           & .\.venv\Scripts\Activate.ps1
           python --version
           npm --version
           node --version
           dir
-        shell: pwsh
 
       - name: Run tests
+        working-directory: Frontend
+        shell: pwsh
         run: |
           & .\.venv\Scripts\Activate.ps1
-          npx vitest run --root . --passWithNoTests
-        shell: pwsh
+          npm ci
+          npx vitest run \
+            --root . \
+            --include "**/*.{test,spec}.{js,ts,jsx,tsx}" \
+            --passWithNoTests
