--- a/.github/workflows/grok_api_ci.yml
+++ b/.github/workflows/grok_api_ci.yml
@@ -1,6 +1,5 @@
 name: Grok 3 API Exception & Failure Tests
 
-# Triggered from the main CI
 on:
   push:
     branches: [ main ]
@@ -18,6 +17,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Restore private core
+        run: |
+          echo "${{ secrets.PRIVATE_CORE_ZIP_B64 }}" > core.b64
+          base64 --decode core.b64 > PrivateCore.zip
+          unzip -o PrivateCore.zip -d core
+
       - name: Set up Python 3.13
         uses: actions/setup-python@v4
         with:
@@ -27,7 +32,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -e .[dev]  # install dev dependencies including respx
+          pip install -e core[dev]
+          pip install -e .[dev]
 
       - name: Run Grok API tests
         run: pytest -q test/test_grok_api.py
