--- a/.github/workflows/json-schema-regression.yml
+++ b/.github/workflows/json-schema-regression.yml
@@ -14,16 +14,17 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # 1. Checkout the repository
       - uses: actions/checkout@v3
-
-      # 2. Setup Python 3.13.5
+      - name: Restore private core
+        shell: pwsh
+        run: |
+          echo "${{ secrets.PRIVATE_CORE_ZIP_B64 }}" > core.b64
+          base64 --decode core.b64 > PrivateCore.zip
+          unzip -o PrivateCore.zip -d core
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.13.5'
-
-      # 3. Create and activate virtual environment, install core deps
       - name: Install dependencies
         shell: pwsh
         run: |
@@ -31,46 +32,33 @@ jobs:
           .\.venv\Scripts\Activate.ps1
           pip install --upgrade pip setuptools
           pip install -r requirements.txt
-
-      # 4. Set required environment variables
       - name: Configure environment
         shell: pwsh
         run: |
           $Env:OPENAPI_SCHEMA_PATH = "${{ github.workspace }}\openapi_schema.json"
           $Env:API_BASE_URL        = "http://127.0.0.1:8000"
           $Env:CHATBOT_TOKEN       = "${{ secrets.CHATBOT_TOKEN }}"
-
-      # 5. Install any extra packages needed by the service
       - name: Install service dependencies
         shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
           pip install prometheus_client httpx fastapi
-
-      # 6. Start the API server in background
       - name: Launch API server
         shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
-          Start-Process -NoNewWindow -FilePath .\.venv\Scripts\uvicorn.exe `
-            -ArgumentList 'api_server:app','--host','127.0.0.1','--port','8000','--reload'
+          Start-Process -NoNewWindow -FilePath .\.venv\Scripts\uvicorn.exe -ArgumentList 'api_server:app','--host','127.0.0.1','--port','8000','--reload'
           Start-Sleep -Seconds 2
-
-      # 7. Enable cost-saving/mock mode for fast stub responses
       - name: Enable stub mode
         shell: pwsh
         run: |
           $Env:COST_SAVING_TEST = "true"
           $Env:MOCK_LLM         = "true"
-
-      # 8. Check formatting with Black
       - name: Check formatting with Black
         shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
           black --check .
-
-      # 9. Run the JSON Schema regression test
       - name: Run contract test
         shell: pwsh
         run: |
