--- a/.github/workflows/quick_verification.yml
+++ b/.github/workflows/quick_verification.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   quick-verification:
     runs-on: windows-latest
-
     env:
       PYTHONUTF8: '1'
       BASE_URL: 'http://127.0.0.1:8000'
@@ -16,17 +15,20 @@ jobs:
       MOCK_LLM: '1'
       COST_SAVING_TEST: '1'
       API_TOKEN: ${{ secrets.VELTRAX_API_TOKEN }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+      - name: Restore private core
+        shell: pwsh
+        run: |
+          echo "${{ secrets.PRIVATE_CORE_ZIP_B64 }}" > core.b64
+          base64 --decode core.b64 > PrivateCore.zip
+          unzip -o PrivateCore.zip -d core
       - name: Setup Python 3.13
         uses: actions/setup-python@v4
         with:
           python-version: '3.13'
           architecture: 'x64'
-
       - name: Initialize venv & install deps
         shell: pwsh
         run: |
@@ -35,16 +37,12 @@ jobs:
           pip install --upgrade pip
           pip install httpx uvicorn fastapi prometheus_client
           pip install -r requirements.txt
-
       - name: Launch Uvicorn server
         shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
-          Start-Process -FilePath .\.venv\Scripts\python.exe `
-                        -ArgumentList "-m","uvicorn","api_server:app","--host","127.0.0.1","--port","8000","--log-level","info" `
-                        -WindowStyle Hidden | Out-Null
+          Start-Process -FilePath .\.venv\Scripts\python.exe -ArgumentList "-m","uvicorn","api_server:app","--host","127.0.0.1","--port","8000","--log-level","info" -WindowStyle Hidden | Out-Null
           Start-Sleep -Seconds 8
-
       - name: Run quick cost-saving test
         shell: pwsh
         run: |
