--- a/.github/workflows/secret_scan.yml
+++ b/.github/workflows/secret_scan.yml
@@ -1,4 +1,5 @@
 name: Secret Leak Scan
+
 on:
   push:
     branches: [ main, deep-stress-test ]
@@ -8,13 +9,16 @@ jobs:
   gitleaks:
     runs-on: ubuntu-latest
     steps:
-      # Fetch the full Git history (by default only fetch-depth:1 will cause revision range parsing to fail)
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
+      - name: Restore private core
+        run: |
+          echo "${{ secrets.PRIVATE_CORE_ZIP_B64 }}" > core.b64
+          base64 --decode core.b64 > PrivateCore.zip
+          unzip -o PrivateCore.zip -d core
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
         with:
-          # v2 uses flags instead of args
           flags: "--path=. --verbose"
