--- a/.github/workflows/soak_locust_1m.yml
+++ b/.github/workflows/soak_locust_1m.yml
@@ -10,8 +10,6 @@ on:
 jobs:
   soak-test:
     runs-on: ubuntu-latest
-
-    # Inject necessary token/URL/model configuration for API server and tests
     env:
       XAI_API_KEY: ${{ secrets.XAI_API_KEY }}
       XAI_API_URL: ${{ secrets.XAI_API_URL }}
@@ -24,25 +22,26 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+      - name: Restore private core
+        run: |
+          echo "${{ secrets.PRIVATE_CORE_ZIP_B64 }}" > core.b64
+          base64 --decode core.b64 > PrivateCore.zip
+          unzip -o PrivateCore.zip -d core
       - name: Set up Python 3.13
         uses: actions/setup-python@v4
         with:
           python-version: '3.13'
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install prometheus_client httpx fastapi uvicorn python-dotenv locust
-
       - name: Start API server
         run: |
           nohup uvicorn api_server:app \
             --host 127.0.0.1 --port 8000 --log-level info \
             > uvicorn.log 2>&1 &
           sleep 5
-
       - name: Run soak test for 20 seconds
         run: |
           pytest test/test_soak_locust.py -q
@@ -50,7 +49,6 @@ jobs:
             -f test/test_soak_locust.py \
             --host=http://localhost:8000 \
             --headless -u1 -r1 --run-time 20s
-
       - name: Stop API server
         run: |
           pkill -f "uvicorn api_server:app"
