--- a/.github/workflows/startup_robustness_tests.yml
+++ b/.github/workflows/startup_robustness_tests.yml
@@ -14,6 +14,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Restore private core
+        shell: pwsh
+        run: |
+          echo "${{ secrets.PRIVATE_CORE_ZIP_B64 }}" > core.b64
+          base64 --decode core.b64 > PrivateCore.zip
+          unzip -o PrivateCore.zip -d core
+
       - name: Setup Python 3.13
         uses: actions/setup-python@v4
         with:
