--- a/.github/workflows/static_security_analysis.yml
+++ b/.github/workflows/static_security_analysis.yml
@@ -1,4 +1,3 @@
-# .github/workflows/static_security_analysis.yml
 name: Static Security Analysis
 
 on:
@@ -19,6 +18,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Restore private core
+        run: |
+          echo "${{ secrets.PRIVATE_CORE_ZIP_B64 }}" > core.b64
+          base64 -d core.b64 > PrivateCore.zip
+          unzip -o PrivateCore.zip -d core
 
       - name: Setup Python 3.13
         uses: actions/setup-python@v4
